# wa_whisper

./: .gitignore  AGENTS.md  Whisper.md  pyproject.toml  requirements.txt
docs/: README.md
scripts/: bootstrap.sh  run_smoke_tests.py  wa-whisper  wa-whisper-start  wa-whisper-stop
src/wa_whisper/: __init__.py  hotkeys.py  log_utils.py  main.py  recorder.py  text_postprocess.py  voice_isolation.py  whisper_backend.py
src/wa_whisper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: wa-whisper-ptt.service
tests/: conftest.py  test_recorder.py  test_text_postprocess.py
